[tool.poetry]
name = "mtga-log-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU GPL v3.0"
readme = "README.md"
packages = [{include = "mtga_log_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
